Added : Using Lambok library for logging UC7.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.username=root
 spring.datasource.password=Mujawar#1118
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+environment=COMMON
+
+
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.root=WARN
+logging.level.com.bridgelabz=DEBUG
