--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,14 @@
 environment=dev
+
 logging.level.root=WARN
-logging.level.org.springframework.web=WARN
+logging.level.org.springframework=WARN
 logging.level.org.hibernate=ERROR
 logging.level.com.bridgelabz=DEBUG
+
+#Database Setup
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrollUser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
