--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,8 +7,9 @@ logging.level.com.bridgelabz=DEBUG
 
 #Database Setup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
-spring.datasource.username=${PAYROLL_DB_USERNAME:payrollUser}
-spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username=${payrollUser}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+server.port=8081
