--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ logging.level.org.hibernate=ERROR
 logging.level.com.bridgelabz=DEBUG
 
 #Database Setup
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
 spring.datasource.username=${payrollUser}
 spring.datasource.password=${password}
